# Containa

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  assert_config.hpp
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml
bench/: CMakeLists.txt  vector_bench.cc
container/: vectra.hpp
tests/: CMakeLists.txt  test_main.cc  vectra_test.cc
